--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
           <div>
             <h2>About Me</h2>
             <p>
-             "The stars are aligning", "This feels way too good to be true". These are some of the quotes I kept on saying to myslef after my first ineraction
+             "The stars are aligning", "This feels way too good to be true". These are some of the quotes I kept on saying to myslef after my first interaction
              with Data Related tasks. I graduated from Heriot Watt University with an Honours degree in Mathematics, and unfortunately I left University
              without a clear career plan or knowledge of what to do with a Mathematics degree. But then what I knew I got from Mathematics was 
              the ability to solve problems, think creatively and learn quickly so I then encouraged myself to to pursue a variety of online courses from Photoshopping skills,
@@ -180,11 +180,11 @@
         <!-- Blog Post 1 -->
         <div class="col-md-4 mb-4">
           <div class="card">
-            <img src="images/blog/1.png" class="card-img-top" alt="Blog 1">
+            <img src="images/blog/frustrated_interview.jpg" class="card-img-top" alt="Blog 1">
             <div class="card-body">
-              <h5 class="card-title">Blog Post Title 1</h5>
-              <p class="card-text">Brief description of the blog post.</p>
-              <a href="#" class="btn btn-primary">Read More</a>
+              <h5 class="card-title">First Interview experience</h5>
+              <p class="card-text">Sometimes we always get into new experience being unsure, this is basiucally a motivational post.</p>
+              <a href="https://medium.com/@kagothipe189/interview-experience-b6b5f8d5c39d" class="btn btn-primary">Read More</a>
             </div>
           </div>
         </div>
