--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
           <div>
             <h2>About Me</h2>
             <p>
-             "The stars are aligning", "This feels way too good to be true". These are some of the quotes I kept on saying to myslef after my first interaction
+             "The stars are aligning", "This feels way too good to be true". These are some of the quotes I kept on saying to myself after my first interaction
              with Data Related tasks. I graduated from Heriot Watt University with an Honours degree in Mathematics, and unfortunately I left University
              without a clear career plan or knowledge of what to do with a Mathematics degree. But then what I knew I got from Mathematics was 
              the ability to solve problems, think creatively and learn quickly so I then encouraged myself to to pursue a variety of online courses from Photoshopping skills,
