--- a/index.html
+++ b/index.html
@@ -135,6 +135,21 @@
               </div>
             </div>
           </div>
+          <!--Project Tile 4-->
+          <div class="col-md-4 mb-4">
+            <div class="card">
+              <a href="https://public.tableau.com/app/profile/kago.thipe/viz/Unemployement_Botswana/Dashboard1" target="_blank">
+                <img src="images/projects/homeless.jpg" class="card-img-top" alt="Project 3">
+              </a>
+              <div class="card-body">
+                <a href="https://public.tableau.com/app/profile/kago.thipe/viz/Unemployement_Botswana/Dashboard1" target="_blank" class="text-decoration-none">
+                  <h5 class="card-title">Current Botswana Unemployment Stats</h5>
+                </a>
+                <p class="card-text">This is a simple visualization carried out using Tableau to showcase some important information regarding the state of 
+                  Unemployment in Botswana.</p>
+              </div>
+            </div>
+          </div>
         <!-- Add more project tiles as needed -->
       </div>
     </div>
@@ -151,7 +166,7 @@
           <div>
             <h2>About Me</h2>
             <p>
-             "The stars are aligning", "This feels way too good to be true". These are some of the quotes I kept on saying to myself after my first interaction
+             "The stars are aligning", "This feels way too good to be true". These are some of the quotes I kept on saying to myslef after my first interaction
              with Data Related tasks. I graduated from Heriot Watt University with an Honours degree in Mathematics, and unfortunately I left University
              without a clear career plan or knowledge of what to do with a Mathematics degree. But then what I knew I got from Mathematics was 
              the ability to solve problems, think creatively and learn quickly so I then encouraged myself to to pursue a variety of online courses from Photoshopping skills,
