--- a/index.html
+++ b/index.html
@@ -166,6 +166,8 @@
           <div>
             <h2>About Me</h2>
             <p>
+              They say, 'A journey of a thousand miles begins with a single step', but I feel with me just creating this website
+              I have already taken multiple steps but in a direction I still HOPE takes me to my desired destination.
              "The stars are aligning", "This feels way too good to be true". These are some of the quotes I kept on saying to myslef after my first interaction
              with Data Related tasks. I graduated from Heriot Watt University with an Honours degree in Mathematics, and unfortunately I left University
              without a clear career plan or knowledge of what to do with a Mathematics degree. But then what I knew I got from Mathematics was 
@@ -217,14 +219,25 @@
         <!-- Blog Post 3 -->
         <div class="col-md-4 mb-4">
           <div class="card">
-            <img src="images/blog/3.png" class="card-img-top" alt="Blog 3">
+            <!-- Link the image to the PDF -->
+            <a href="images/blog/masters_dissertation.pdf" target="_blank">
+              <img src="images/blog/fraud.jpg" class="card-img-top" alt="Masters Dissertation">
+            </a>
             <div class="card-body">
-              <h5 class="card-title">Blog Post Title 3</h5>
-              <p class="card-text">Brief description of the blog post.</p>
-              <a href="#" class="btn btn-primary">Read More</a>
+              <!-- Link the title to the PDF -->
+              <a href="images/blog/masters_dissertation.pdf" target="_blank" class="text-decoration-none">
+                <h5 class="card-title">Anomaly Detection for Mobile Money Fraud Transactions</h5>
+              </a>
+              <p class="card-text">
+                This dissertation explores the use of supervised machine learning models for detecting fraud in mobile money transactions.
+              </p>
+              <!-- Read More button linking to the PDF -->
+              <a href="images/blog/masters_dissertation.pdf" class="btn btn-primary" target="_blank">Read More</a>
             </div>
           </div>
         </div>
+        
+
         <!-- Add more blog posts as needed -->
       </div>
     </div>
